# PokerMon

./: .gitignore  .railwayignore  CLAUDE.md  Dockerfile  README.md  modal_serve.py  modal_train.py  pyproject.toml
configs/: kuhn.yaml  leduc.yaml  nlhe6.yaml
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: ActionBanner.tsx  Card.tsx  Controls.tsx  GameLog.tsx  PlayerHand.tsx  Table.tsx
notebooks/: train_deep_cfr.ipynb
pokermon/: __init__.py
pokermon/cfr/: deep_cfr.py  infoset.py  regret_matching.py  reservoir.py  tabular_cfr.py  traversal.py
pokermon/eval/: arena.py  baselines.py  exploitability.py  metrics.py
pokermon/game/: action.py  card.py  deck.py  engine.py  hand_eval.py  kuhn.py  leduc.py  state.py
pokermon/net/: advantage_net.py  batch_inference.py  card_encoder.py  history_encoder.py  strategy_net.py
pokermon/train/: checkpoint.py  config.py  trainer.py
pokermon/utils/: cards.py  logging.py
scripts/: evaluate.py  play.py  train_kuhn.py  train_leduc.py  train_nlhe.py
server/: app.py
tests/: test_action.py  test_card.py  test_deck.py  test_deep_cfr.py  test_engine.py  test_hand_eval.py  test_kuhn.py  test_leduc.py  test_networks.py  test_regret_matching.py  test_reservoir.py  test_state.py  test_tabular_cfr.py
